--- a/index.html
+++ b/index.html
@@ -3,11 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Tracardi</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1 class="Header">Where the world builds software</h1>
+<section class="Hero">
+    <nav class="TopMenu">
+        <span class="Tracardi">
+            <span>TRACARDI</span>
+        </span>
+        <ul class="NavUl">
+            <li>Home</li>
+            <li>About</li>
+            <li>Features</li>
+            <li>Use cases</li>
+            <li>Installation</li>
+        </ul>
+    </nav>
+    <section class="BigBang">
+        <h1 class="Text">
+            Where you track anything.
+        </h1>
+        <p class="SubText">Open source, free platform for collecting and managing customer data from various sources.<br />Interested?</p>
+        <ul>
+            <li>No credit card required</li>
+            <li>No time limits - its open source</li>
+        </ul>
+    </section>
+
+    <section class="Download">
+        <button>Download now - it's free</button>
+    </section>
+
+
+</section>
+
 </body>
 </html>
